# isa-chat

./: .gitignore  LICENSE  README.md  docker-compose.yml  manage.sh  prometheus.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  chat.py
backend/app/core/: config.py  dependencies.py  utils.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: auth_service.py  bedrock_service.py  chat_service.py  file_service.py  web_search_service.py
backend/migrations/: env.py
backend/migrations/versions/: 20231219_initial.py
backend/scripts/: create_superuser.py  start.sh
frontend/: .env.example  .eslintrc.json  .prettierrc  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.d.ts
frontend/src/components/Chat/: ChatArea.tsx  ChatHeader.tsx  ChatInput.tsx  MessageList.tsx  WelcomeScreen.tsx
frontend/src/components/Sidebar/: ChatHistoryList.tsx  Sidebar.tsx  UserProfile.tsx
frontend/src/components/common/: Notifications.tsx
frontend/src/hooks/: useChat.ts
frontend/src/services/: bedrock.ts  chat.ts  fileHandler.ts  webSearch.ts
frontend/src/store/: index.ts
frontend/src/store/features/: chatSlice.ts  uiSlice.ts
frontend/src/utils/: helpers.ts
