[tool.poetry]
name = "isa-chat-backend"
version = "0.1.0"
description = "Backend para ISA Chat usando FastAPI y AWS Bedrock"
authors = ["ISA Chat Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
python-magic = "^0.4.27"
prometheus-fastapi-instrumentator = "^6.1.0"
loguru = "^0.7.2"
asyncpg = "^0.29.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
boto3 = "^1.29.6"
aiohttp = "^3.9.1"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
